# ai_playground

./: .gitignore  README.md  pyproject.toml
ai_playground/: hooks.py
ai_playground/ai_playground/doctype/ai_assistant/: ai_assistant.js  ai_assistant.json  ai_assistant.py  item_lookup_handler.py  report_dispatcher.py  report_handler.py.old  script.save  test_ai_assistant.py
ai_playground/config/: desktop.py  docs.py
ai_playground/public/js/: ai_assistant.js
